using TurnBasedCombat.Core;

namespace TurnBasedCombat.Commands
{
    public class UseItemCommand : ICommand
    {
        public void Execute()
        {
            throw new System.NotImplementedException();
        }

        public void Undo()
        {
            throw new System.NotImplementedException();
        }
    }
}