namespace TurnBasedCombat.Strategies
{
    public interface IAttackStrategy
    {
        
    }
}