namespace TurnBasedCombat.Strategies
{
    public class RandomStrategy
    {
        
    }
}